--- a/README.mkd
+++ b/README.mkd
@@ -25,16 +25,21 @@ These are the available options and some of their defaults.  In your `project.cl
 
 ### Use this for user-level plugins:
 
-Put `[ohpauleez/lein-pedestal "0.1.0-beta9"]` into the `:plugins` vector of your
+Put `[ohpauleez/lein-pedestal "0.1.1-beta9"]` into the `:plugins` vector of your
 `:user` profile or...
 
 ### Use this for project-level plugins:
 
-Put `[ohpauleez/lein-pedestal "0.1.0-beta9"]` into the `:plugins` vector of your project.clj.
+Put `[ohpauleez/lein-pedestal "0.1.1-beta9"]` into the `:plugins` vector of your project.clj.
 
-FIXME: and add an example usage that actually makes sense:
+
+### Commands
 
     $ lein pedestal [war | uberwar | help]
+
+You can supply a war/jar name from the command line:
+
+    $ lein pedestal uberwar my-project.war
 
 ## License
 
